# crow_c-_University_project

./: CMakeLists.txt  data.json  main.cpp
include/: CampusSystem.h  Faculty.h  Notice.h  Student.h
nlohmann/: json.hpp
public/: course_form.html  courses.html  department_form.html  index.html  student_form.html  students.html  style.css  teacher_form.html  view_courses.html  view_departments.html  view_students.html  view_teachers.html
src/: CampusSystem.cpp  Faculty.cpp  Notice.cpp  main.cpp
